[package]
name = "lhava-vertex-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
tokio = { version = "1.21.0", features = ["full"] }
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tokio-tungstenite = { git = "https://github.com/kazk/tokio-tungstenite", branch = "feature/permessage-deflate", features = ["rustls-tls-webpki-roots", "deflate"]}
futures-util = "0.3.30"
vertex-sdk = "0.2.8"
ethers = "2.0.14"
ethers-core = "2.0.14"
ethers-signers = "2.0.14"
hex = "0.4.3"
serde_with = "3.11.0"
